--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SmartCommerceDB": "Data Source=EDONB\\EDONB;Initial Catalog=SmartCommerceAI;Integrated Security=True;Trust Server Certificate=True"
+  },
   "AllowedHosts": "*"
 }
